<resources>
    <string name="app_name">DDQ Brain Train</string>
    <string name="DangKy">Đăng ký</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="ngay_sinh">Ngày Sinh</string>
    <string name="nu">Nữ</string>
    <string name="thoat">Thoát</string>
    <string name="cmnd">Chứng Minh Nhân Dân</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="nam">Nam</string>
    <string name="mat">Mật khẩu</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attention_des">Tăng khả năng tập trung</string>
    <string name="attention_name">Tập trung</string>
    <string name="memory_name">Trí nhớ</string>
    <string name="memory_des">Kiểm tra trí nhớ</string>

    // Language part:
    <string name="language_name">Ngôn ngữ</string>
    <string name="language_des">Kiểm tra khả năng ngôn ngữ</string>

    // Math part:
    <string name="math_name">Tính toán</string>
    <string name="math_des">Các phép tính đơn giản</string>
</resources>
