<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".SignInActivity"
    android:background="@color/BGColor">

    <ImageView
        android:layout_above="@id/SignIpFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo"/>


    <LinearLayout
        android:id="@+id/SignIpFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/SignInTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:padding="@dimen/size_10dp"
            android:text="@string/dang_nhap"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="@string/ten_dang_nhap"
            android:inputType="textShortMessage"
            android:minHeight="48dp"
            android:padding="@dimen/size_10dp"
            android:textColorHint="@color/Gray" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="@string/mat_khau"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="@dimen/size_10dp"
            android:password="true"
            android:textColorHint="@color/Gray" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:padding="@dimen/size_10dp"
            android:backgroundTint="@color/ButtonColor"
            android:layout_weight="1"
            android:text="Đăng Nhập" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp"
            android:text="@string/dang_ky"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:onClick="SignUp"
            />



    </LinearLayout>

</RelativeLayout>