<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".SignUpActivity"
    android:background="@color/BGColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/SignUpFrame"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/robotoregular"
        android:padding="@dimen/size_10dp"
        android:text="@string/DangKy"
        android:textColor="#616161"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/SignUpFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="Email"
            android:inputType="textShortMessage"
            android:minHeight="48dp"
            android:padding="@dimen/size_10dp"
            android:textColorHint="#757575" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="@string/mat_khau"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="@dimen/size_10dp"
            android:password="true"
            android:textColorHint="@color/Gray" />


        <EditText
            android:id="@+id/repeatpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:autofillHints=""

            android:background="@color/white"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="Nhập lại mật khẩu"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="@dimen/size_10dp"
            android:password="true"
            android:textColorHint="@color/Gray" />


        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ButtonColor"
                android:padding="@dimen/size_10dp"
                android:text="@string/dang_ky" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:layout_weight="1"
                android:onClick="Out"
                android:padding="@dimen/size_10dp"
                android:text="@string/thoat"
                android:textColor="#1DE9B6" />
        </LinearLayout>





    </LinearLayout>


</RelativeLayout>